testdata/baselines/reference/submodule/compiler/jsdocIllegalTags.errors.txt
/a.js(6,17): error TS1093: Type annotation cannot appear on a constructor declaration.


==== /a.js (1 errors) ====
    class C {
        /** @template T */
        constructor() { }
    }
    class D {
        /** @return {number} */
                    ~~~~~~~~
!!! error TS1093: Type annotation cannot appear on a constructor declaration.
        constructor() {}
    }
    